--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.Unilocal" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/color_navigation</item>
+        <item name="colorPrimary">@color/color_boton</item>
         <item name="colorPrimaryVariant">@color/color_background</item>
-        <item name="colorOnPrimary">@color/color_boton</item>
+        <item name="colorOnPrimary">@color/color_background</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
